--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,143 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Samarth P
+    - name: Contact
+      value: +91 7337610771
+    - name: Email
+      value: samarthprakash8@gmail.com
+    - name: Location
+      value: Bengaluru, India
     - name: Languages
-      value: English, German
+      value: English, Hindi, Kannada
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: B.Tech, Computer Science and Engineering
+      institution: PES University, EC Campus, Bengaluru, India
+      year: 2022 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - CGPA 8.5
+        - Focus on AI, Machine Learning, and Quantum Computing
+    - title: Grade XII CBSE
+      institution: GEAR Innovative International School, Bengaluru, India
+      year: 2020 - 2022
       description:
-        - Description 1.
-        - Description 2.
+        - Percentage 87.6%
+    - title: Grade X ICSE
+      institution: Chinmaya Vidyalaya, Koramangala, Bengaluru, India
+      year: 2010 - 2020
+      description:
+        - Percentage 92%
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Quantum Research Intern – AI for Quantum
+      institution: IBM Research India, Bengaluru, India
+      year: June 2025 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Built a CLI-based AI coding agent that automates the migration of the Qiskit codebase from Python into Rust, assisting developers with seamless translation and optimization
+        - Enhanced Qiskit Code Assistant and Qiskit Studio with Agentic AI systems capable of autonomous decision-making, intelligent code generation, context-aware suggestions, and dynamic workflow orchestration
+        - Developed advanced Retrieval-Augmented Generation (RAG) chatbots to assist and streamline quantum computing workflows
+
+    - title: AI Research Intern
+      institution: CognitiveLab, Bengaluru, India
+      year: August 2024 - June 2025
       description:
-        - Description 1.
-        - Description 2.
+        - Developed a scalable synthetic data framework to adapt Vision-Language Models (VLMs) for over 22 languages and multilingual documents
+        - Created the Nayana Synthetic Dataset with 2M+ document images, supporting OCR, VQA, and layout analysis in low-resource languages
+        - Trained, finetuned and released SOTA models, published papers in top tier venues
+        - Awarded a $100,000 Llama Impact Grant from Meta in early 2025, recognizing contribution to multilingual GenAI
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Summer Research Intern
+      institution: IIIT Bangalore, Bengaluru, India
+      year: June 2024 - August 2024
       description:
+        - Implemented "Parichaya" a pipeline to easily search information from a corpus in colloquial Indic languages
+        - Developed a RAG-based AI system for multi-modal question answering in Kannada
+        - Created a full stack web application in Next.js and FastAPI
+        - Worked under Prof. Srinath Srinivasa on the IndicNLP project
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Project Intern
+      institution: Bosch University Connect Program, Bengaluru, India
+      year: March 2024 - March 2025
+      description:
+        - Developed a GenAI platform for Bosch to assist Technicians with Troubleshoot Assistance
+        - Implemented RAG (Retrieval-Augmented Generation) and Agentic AI system to input vehicle issues and receive step-by-step troubleshooting guidance
+        - Used LlamaIndex to create the AI pipeline and Next.js and FastAPI for the interface
 
-- title: Open Source Projects
+- title: Selected Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: manimator
+      year: 2024
+      description: 
+        - AI-powered tool to transform research papers and mathematical concepts into animated visual explanations using the Manim engine
+        - Built a scalable pipeline for generating animations from arXiv papers and user prompts, achieving over 15,000+ uses within a week of launch
+        - Deployed via FastAPI and Gradio, with Docker support, and featured as Hugging Face's Space of the Week
+
+    - title: SynthDoc
+      year: 2024
+      description:
+        - Built a synthetic document generation library with support for multiple languages, fonts, and layouts for OCR, VQA, and layout analysis tasks
+        - Used to create the Nayana Synthetic Dataset 2M+ Indic document images, the largest of its kind
+        - Scaled generation using Modal with 100 CPU and 10 GPU instances in parallel
+
+    - title: HyperCluster
+      year: 2024 - Present
+      description:
+        - Developed a peer-to-peer distributed framework for deploying quantized large language models on edge devices
+        - Implementing self-organizing network with automatic peer discovery and fault tolerance using Iroh
+        - Building distributed LLM inference system with model sharding across network nodes, BitNet quantization, and dynamic layer offloading
+
+    - title: KissanDial
+      year: 2024
+      description:
+        - Developed a voice call-based AI agent assistant for farmers, providing vital information on agricultural subsidies, weather updates, and more
+        - Featured by LlamaIndex as an innovative application of using AI agents in agriculture
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2025
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - Meta Llama Impact Grant ($100,000) - Advancing Multilingual GenAI
+    - year: 2024
       items:
-        - Max Planck Medal
+        - AMD Kria KR260 FPGA - AMD Pervasive AI Hackathon, Robotics AI Category
 
-- title: Academic Interests
+- title: Technical Skills
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Programming Languages
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Python, C/C++, Java, JavaScript, Go, Dart, SQL, Assembly, Shell
+    - title: AI/ML Frameworks
       items:
-        - Description 1.
-        - Description 2.
+        - LlamaIndex, LangChain, CrewAI, PyTorch, TensorFlow, Hugging Face, Transformers
+        - Scikit-learn, llama.cpp, SGLang, vLLM, Qiskit, NumPy, pandas
+    - title: Web Technologies
+      items:
+        - React, Next.js, Node.js, FastAPI, Flask, Django, REST APIs
+    - title: Cloud & Infrastructure
+      items:
+        - Google Cloud, Amazon Web Services, Microsoft Azure, Vercel, Docker, Modal
+    - title: Databases & Big Data
+      items:
+        - MongoDB, Firebase, Hadoop, Kafka, Spark, Zookeeper
+    - title: Specializations
+      items:
+        - AI, Machine Learning, Deep Learning, LLMs, VLMs, RAG, Computer Vision
+        - Quantum Computing, Embedded Systems, IoT
 
-- title: Other Interests
+- title: Publications
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <strong>Parichaya&#58; Rural Colloquial Knowledge AI Interface</strong> - CODS-COMAD '24
+    - <strong>Nayana OCR&#58; A Scalable Framework for Document OCR in Low-Resource Languages</strong> - NAACL '25 Workshop
+    - <strong>Nayana&#58; A Foundation for Document-Centric Vision-Language Models</strong> - CVPR '25 Workshop (Non-Archival), ICCV '25 Workshop
+    - <strong>Manimator&#58; Transforming Research Papers into Visual Explanations</strong> - ICML '25 NewInML Workshop (Non-Archival)
+    - <strong>The Gemma Sutras&#58; Fine-Tuning Gemma 3 for Sanskrit Sandhi Splitting</strong> - ICML '25 NewInML Workshop (Non-Archival), EMNLP '25 WiNLP Workshop (Archival)
+    - <strong>Mudra-VLM&#58; Adapting Vision-Language Models for Fine-Grained Bharatanatyam Mudra Recognition</strong> - ICCV '25 Workshop (Non-Archival)
